--- a/assets/css/generator.css
+++ b/assets/css/generator.css
@@ -2,10 +2,9 @@ body
 {
     font-size: 14px;
     font-weight: 600;
-    font-family: -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Roboto, Ubuntu;
+    font-family: "Segoe UI", 'Roboto', 'Ubuntu', sans-serif;
     color: #333;
 }
-
 .gen_container {
     padding-top: 5px;
     display: flex;
@@ -13,7 +12,7 @@ body
     width: 100%;
     height: 100%;
     align-items: center;
-    margin-left: 8px;
+    margin-left: 7px;
     margin-right: 8px;
 }
 
@@ -90,6 +89,7 @@ body
     border: lightblue;
     border-radius: 5px;
     margin-top: 15px;
+    margin-left: 0.25px;
 }
 
 .gen_button:hover
